[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/MsgPopup.gd" type="Script" id=1]

[node name="MsgPopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1269.0
margin_bottom = -591.0
rect_min_size = Vector2( 600, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 647.0
margin_bottom = 485.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 647.0
margin_bottom = 485.0

[node name="ItemImage" type="TextureRect" parent="VBoxContainer"]
margin_right = 643.0
stretch_mode = 6

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 643.0
margin_bottom = 481.0
rect_min_size = Vector2( 300, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemText" type="Label" parent="VBoxContainer/ScrollContainer"]
margin_right = 643.0
margin_bottom = 477.0
rect_min_size = Vector2( 300, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "asdf"
align = 1
valign = 1
autowrap = true
[connection signal="about_to_show" from="." to="." method="_on_MsgPopup_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_MsgPopup_popup_hide"]
